--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,8 @@
     "http": "^0.0.1-security",
     "moment": "^2.30.1",
     "socket.io": "^4.7.5"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
