--- a/backend/package.json
+++ b/backend/package.json
@@ -2,16 +2,10 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.7.2",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "date-and-time": "^3.3.0",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "http": "^0.0.1-security",
-    "moment": "^2.30.1",
-    "socket.io": "^4.7.5"
+    "moment": "^2.30.1"
   },
   "scripts": {
     "start": "node server.js"
